--- a/week1-pandas-series.ipynb
+++ b/week1-pandas-series.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "ceb40491-3a06-414e-a85d-73435de1f9f8",
    "metadata": {
     "tags": []
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "fce71eb6-17ae-4c79-ad0a-260096656d18",
    "metadata": {
     "tags": []
@@ -369,33 +369,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "59c50cdf-d2b2-4765-b1fb-1ad6bf5c134f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "A    NA\n",
-       "B    NA\n",
-       "C     4\n",
-       "D    39\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2\n",
     "\n",
     "# `mask`: Series.mask(cond, other=<no_default>, *, inplace=False, axis=None, level=None)\n",
     "# Replace values where the condition is True.\n",
-    "s.mask(s < 0, 'NA')\n"
+    "s = s.mask(s < 0)\n",
+    "# OR s = s.mask(s == -999)"
    ]
   },
   {
