finish in class notes for week 3

--- a/week3-updating-data-frame.ipynb
+++ b/week3-updating-data-frame.ipynb
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "c792d982-5096-45f1-b4b0-41c29a90cb6c",
    "metadata": {
     "tags": []
@@ -1093,10 +1093,10 @@
     {
      "data": {
       "text/plain": [
-       "38.3"
+       "nan"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "2c59677a-b528-47a4-b8a5-2172a9873af1",
    "metadata": {
     "tags": []
@@ -1131,7 +1131,7 @@
        "Name: 859, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "8f3f0022-a244-410c-915a-7286cf5d6da1",
    "metadata": {
     "tags": []
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "7427d232-a300-408f-ba0a-71484989a023",
    "metadata": {
     "tags": []
@@ -1204,7 +1204,7 @@
        "Name: 859, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "e68b653e-301c-4a16-8387-46d60180abd5",
    "metadata": {
     "tags": []
@@ -1331,7 +1331,7 @@
        "      <th>125</th>\n",
        "      <td>Adelie</td>\n",
        "      <td>Torgersen</td>\n",
-       "      <td>38.3</td>\n",
+       "      <td>40.3</td>\n",
        "      <td>18.0</td>\n",
        "      <td>195.0</td>\n",
        "      <td>3250.0</td>\n",
@@ -1377,13 +1377,13 @@
        "</div>"
       ],
       "text/plain": [
-       "        species     island bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
-       "id_code                                                                       \n",
-       "754      Adelie  Torgersen           39.1           18.7              181.0   \n",
-       "214      Adelie  Torgersen           39.5           17.4              186.0   \n",
-       "125      Adelie  Torgersen           38.3           18.0              195.0   \n",
-       "859      Adelie  Torgersen            NaN            NaN                NaN   \n",
-       "381      Adelie  Torgersen           36.7           19.3              193.0   \n",
+       "        species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "id_code                                                                        \n",
+       "754      Adelie  Torgersen            39.1           18.7              181.0   \n",
+       "214      Adelie  Torgersen            39.5           17.4              186.0   \n",
+       "125      Adelie  Torgersen            40.3           18.0              195.0   \n",
+       "859      Adelie  Torgersen             NaN            NaN                NaN   \n",
+       "381      Adelie  Torgersen            36.7           19.3              193.0   \n",
        "\n",
        "         body_mass_g     sex  year  body_mass_kg  flipper_length_cm observer  \\\n",
        "id_code                                                                        \n",
@@ -1402,7 +1402,7 @@
        "381      medium  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "0821d4e0-5d5c-45be-afc9-560fe247acb0",
    "metadata": {
     "tags": []
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "50bfd0c5-9929-44a6-ac56-c7ac40ebb228",
    "metadata": {
     "tags": []
@@ -1493,7 +1493,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1689864/1801686444.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1707308/1801686444.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "fd8f4735-c5f6-4dbc-90e3-afdd172968ad",
    "metadata": {
     "tags": []
@@ -1533,7 +1533,7 @@
        "array(['M', 'female', nan], dtype=object)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "7f170bc0-19c7-4439-b2cc-56f2c1da32e6",
    "metadata": {
     "tags": []
@@ -1647,7 +1647,7 @@
        "      <th>125</th>\n",
        "      <td>Adelie</td>\n",
        "      <td>Torgersen</td>\n",
-       "      <td>38.3</td>\n",
+       "      <td>40.3</td>\n",
        "      <td>18.0</td>\n",
        "      <td>195.0</td>\n",
        "      <td>3250.0</td>\n",
@@ -1784,19 +1784,19 @@
        "</div>"
       ],
       "text/plain": [
-       "           species     island bill_length_mm  bill_depth_mm  \\\n",
-       "id_code                                                       \n",
-       "754         Adelie  Torgersen           39.1           18.7   \n",
-       "214         Adelie  Torgersen           39.5           17.4   \n",
-       "125         Adelie  Torgersen           38.3           18.0   \n",
-       "859         Adelie  Torgersen            NaN            NaN   \n",
-       "381         Adelie  Torgersen           36.7           19.3   \n",
-       "...            ...        ...            ...            ...   \n",
-       "140      Chinstrap      Dream           55.8           19.8   \n",
-       "183      Chinstrap      Dream           43.5           18.1   \n",
-       "969      Chinstrap      Dream           49.6           18.2   \n",
-       "635      Chinstrap      Dream           50.8           19.0   \n",
-       "883      Chinstrap      Dream           50.2           18.7   \n",
+       "           species     island  bill_length_mm  bill_depth_mm  \\\n",
+       "id_code                                                        \n",
+       "754         Adelie  Torgersen            39.1           18.7   \n",
+       "214         Adelie  Torgersen            39.5           17.4   \n",
+       "125         Adelie  Torgersen            40.3           18.0   \n",
+       "859         Adelie  Torgersen             NaN            NaN   \n",
+       "381         Adelie  Torgersen            36.7           19.3   \n",
+       "...            ...        ...             ...            ...   \n",
+       "140      Chinstrap      Dream            55.8           19.8   \n",
+       "183      Chinstrap      Dream            43.5           18.1   \n",
+       "969      Chinstrap      Dream            49.6           18.2   \n",
+       "635      Chinstrap      Dream            50.8           19.0   \n",
+       "883      Chinstrap      Dream            50.2           18.7   \n",
        "\n",
        "         flipper_length_mm  body_mass_g  sex  year  body_mass_kg  \\\n",
        "id_code                                                            \n",
@@ -1829,7 +1829,7 @@
        "[344 rows x 12 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,6 +1841,101 @@
     "# Check\n",
     "penguins['sex'].unique()\n",
     "penguins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f57d96eb-9ef0-48c9-9e67-76bce70ce070",
+   "metadata": {},
+   "source": [
+    "The `SettingWithCopyWarning` comes up because `pandas` operations return a view to your data, while others return a copy to your data:\n",
+    "\n",
+    "- **Views** are actual subsets of the original data, when we update them, we update the original data frame\n",
+    "- **Copies** are unique objects, independent from our original data frames. When we update a copy, we are not modifying the original data frame. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d027322-66b6-4948-9388-470bc6b0424a",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "\n",
+    "Only want to use data from Biscoe island, and after analysis, add a new column to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0167dc2d-788b-4c80-a99e-6815d88f7dee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1707308/3020586458.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  biscoe['sample_column'] = 100 # Raises SettingWithCopyWarning\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select penguins from Biscoe Island\n",
+    "\n",
+    "biscoe = penguins[penguins.island=='Biscoe']\n",
+    "\n",
+    "# Check\n",
+    "biscoe\n",
+    "\n",
+    "# ... other analysis\n",
+    "\n",
+    "# Add a column\n",
+    "biscoe['sample_column'] = 100 # Raises SettingWithCopyWarning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "880030b9-fb22-4950-a7a1-c4f7c4696f94",
+   "metadata": {},
+   "source": [
+    "To fix this, we can **take control of the copy-view situation and explicitly ask for a copy of the dataset when subsetting the data.** Use the `copy()` method to do this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "61a95639-5a37-4bb7-8852-99d09903b6ab",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select penguins from Biscoe Island\n",
+    "\n",
+    "biscoe = penguins[penguins.island=='Biscoe'].copy()\n",
+    "\n",
+    "# Add a column\n",
+    "biscoe['sample_column'] = 100 # Raises SettingWithCopyWarning\n",
+    "\n",
+    "# Check data frame\n",
+    "biscoe.head()\n",
+    "\n",
+    "# Check if new column is in original data frame\n",
+    "print('sample_column' in penguins.columns)"
    ]
   }
  ],
